[package]
name = "cryfs-cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "cryfs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
color-print.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-logflag.workspace = true
# TODO Now that we have the cryfs-runner crate, can we remove other cryfs dependencies? Can we remove tokio? Maybe go through all of our crates and minimize inter-crate dependencies
cryfs-blockstore = { path = "../blockstore" }
cryfs-cli-utils = { path = "../cli-utils" }
cryfs-filesystem = { path = "../cryfs-filesystem" }
cryfs-runner = { path = "../cryfs-runner" }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
dialoguer.workspace = true
humantime.workspace = true
itertools.workspace = true
konst.workspace = true
log.workspace = true
once_cell.workspace = true
tokio.workspace = true
console-subscriber = {workspace = true, optional = true}


[dev-dependencies]
assert_cmd.workspace = true
escargot.workspace = true
lazy_static.workspace = true
predicates.workspace = true
rstest.workspace = true

[features]
default = ["check_for_updates", "fuser"]
check_for_updates = ["cryfs-cli-utils/check_for_updates"]
tokio_console = ["dep:console-subscriber"]
fuse_mt = ["cryfs-runner/fuse_mt"]
fuser = ["cryfs-runner/fuser"]
