[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cryfs-config"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
binrw.workspace = true
binary-layout.workspace = true
byte-unit = {workspace = true, features = ["serde"]}
cryfs-blockstore = {path = "../blockstore"}
cryfs-blobstore = {path = "../blobstore"}
cryfs-crypto = {path = "../crypto"}
cryfs-utils = {path = "../utils"}
cryfs-version = {path = "../cryfs-version"}
derive_more.workspace = true
hex.workspace = true
lockable.workspace = true
log.workspace = true
konst.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = []
testutils = []