[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cryfs-filesystem"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# TODO Cleaner dependency graph with fewer edges between different cryfs crates. For example, cryfs-filesystem already depends on cryfs-fsblobstore - why does it have to depend on blobstore and blockstore too? Also, why does cryfs-config need to depend on blockstore? And so on...
anyhow.workspace = true
async-trait.workspace = true
atomic-time.workspace = true
cryfs-blobstore = {path = "../blobstore"}
cryfs-blockstore = {path = "../blockstore"}
cryfs-rustfs = {path = "../rustfs", default-features = false}
cryfs-utils = {path = "../utils"}
cryfs-version = {path = "../cryfs-version"}
cryfs-fsblobstore = { path = "../fsblobstore" }
futures.workspace = true
libc.workspace = true
log.workspace = true
maybe-owned.workspace = true
nix = {workspace = true, features = ["user"] }
tokio = {workspace = true, features = ["sync"]}

[dev-dependencies]
cryfs-blobstore = {path = "../blobstore", features = ["testutils"]}
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}

[features]
ancestor_checks_on_move = []
default = ["ancestor_checks_on_move"]
testutils = ["cryfs-blobstore/testutils", "cryfs-rustfs/testutils"]
