[package]
name = "cryfs-runner"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
atomic-time.workspace = true
cryfs-cli-utils = { path = "../cli-utils" }
cryfs-filesystem = { path = "../cryfs-filesystem" }
cryfs-config = { path = "../cryfs-config" }
cryfs-rustfs = { path = "../rustfs", default-features=false, features=["fuser"]}
cryfs-blobstore = { path = "../blobstore" }
cryfs-blockstore = { path = "../blockstore" }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
daemonize.workspace = true
interprocess.workspace = true
postcard = { workspace = true, features = ["use-std"] }
tokio.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true
tokio-util.workspace = true
