[package]
name = "cryfs-version"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
git2version.workspace = true
konst.workspace = true
serde = {workspace = true, features = ["derive"]}

[build-dependencies]
git2version = {workspace = true, features = ["build"]}

[dev-dependencies]
serde_json.workspace = true
tempdir.workspace = true
