[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
name = "cryfs-cryfs"
version = "0.11.0"

[dependencies]
anyhow = "^1.0.71"
async-trait = "^0.1.68"
binary-layout = "^3.1.3"
binrw = "^0.11.2"
cryfs-blobstore = {path = "../blobstore"}
cryfs-blockstore = {path = "../blockstore"}
cryfs-utils = {path = "../utils"}
cryfs-rustfs = {path = "../rustfs"}
cryfs-version = {path = "../cryfs-version"}
derive_more = "^0.99.17"
futures = "^0.3.28"
thiserror = "^1.0.40"
serde = {version = "^1.0.164", features=["derive"]}
serde_json = "^1.0.97"
serde_with = {version = "^3.0.0", features=["hex"]}
rand = "^0.8.5"
log = "^0.4.19"
hex = "^0.4.3"
lockable = "^0.0.6"
konst = "^0.3.5"
libc = "^0.2.146"
tokio = {version = "^1.28.2", features = ["sync"]}
maybe-owned = "^0.3.4"

[dev-dependencies]
tokio = {version = "^1.28.2", features = ["rt-multi-thread", "macros"]}