[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cryfs-e2e-perf-tests"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
crabtime.workspace = true
criterion = {workspace = true, features = ["async_tokio"]}
cryfs-blobstore = {path = "../blobstore", features = ["testutils"]}
cryfs-blockstore = {path = "../blockstore", features = ["testutils"]}
cryfs-cli-utils = {path = "../cli-utils"}
cryfs-filesystem = {path = "../cryfs-filesystem"}
cryfs-runner = {path = "../cryfs-runner"}
cryfs-rustfs = {path = "../rustfs", default-features = false, features = ["fuser", "fuse_mt"]}
cryfs-utils = {path = "../utils"}
cryfs-version = {path = "../cryfs-version"}
derive_more.workspace = true
fuser.workspace = true
futures.workspace = true
libc.workspace = true
nix = {workspace = true, features = ["fs"] }
pretty_assertions.workspace = true
tempdir.workspace = true
tokio-util.workspace = true
tokio.workspace = true

[features]
benchmark = [] # Run benchmarks instead of counter unit tests
default = []

[[bench]]
harness = false
name = "all_operations"
