[package]
name = "cryfs-recover"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "cryfs-recover"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
clap = {workspace = true, features = ["derive"]}
cryfs-blockstore = {path = "../blockstore"}
cryfs-blobstore = {path = "../blobstore"}
cryfs-cli-utils = {path = "../cli-utils"}
cryfs-cryfs = {path = "../cryfs"}
cryfs-utils = {path = "../utils"}
cryfs-version = {path = "../cryfs-version"}
log.workspace = true
futures.workspace = true
indicatif.workspace = true
thiserror.workspace = true
console.workspace = true

[features]
default = ["check_for_updates"]
check_for_updates = ["cryfs-cli-utils/check_for_updates"]
