[package]
name = "cryfs-rustfs"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cryfs-utils = {path = "../utils"}
derive_more.workspace = true
fuse_mt = {workspace = true, optional = true}
fuse_mt_fuser = {workspace = true, optional = true}
fuser = {workspace = true, optional = true}
futures.workspace = true
libc.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
tokio = {workspace = true, features=["fs"]}
# TODO env_logger and nix are only needed for the passthrough example
env_logger.workspace = true
nix.workspace = true
mockall.workspace = true
tempdir.workspace = true
cryfs-utils = {path = "../utils", features=["testutils"]}
users.workspace = true

[features]
default = ["fuser"]
fuse_mt = ["dep:fuse_mt", "dep:fuse_mt_fuser"]
fuser = ["dep:fuser"]

[[example]]
name = "inmemory"
required-features = ["fuser"]

[[example]]
name = "passthrough"
required-features = ["fuser"]
