[package]
name = "cryfs-rustfs"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
derive_more.workspace = true
fuse_mt = { workspace = true, optional = true }
# TODO Which ABI feature to set for Fuse?
#      7.31 is the newest supported by fuser as of time of writing and was introduced in
#      Linux Kernel 5.2, see https://github.com/torvalds/linux/blob/v5.2/include/uapi/linux/fuse.h .
#      But probably make this configurable in the future.
# TODO Make fuser dependency optional and only include it if the "fuser" feature is enabled (here and below in the macos setup).
fuser = { workspace = true, features = ["abi-7-31"] }
futures.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true  
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
lockable.workspace = true
itertools.workspace = true
time = {workspace = true, features = ["formatting"]}
cryfs-concurrent-store = { path = "../concurrent-store" }

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
tokio = { workspace = true, features = ["fs"] }
# TODO env_logger and nix are only needed for the passthrough example
env_logger.workspace = true
nix = { workspace = true, features = ["fs", "user", "uio"] }
mockall.workspace = true
tempdir.workspace = true
cryfs-utils = { path = "../utils", features = ["testutils"] }
users.workspace = true
# TODO Should we remove `slow_assertions` here to speed up cryfs in debug builds?
lockable = {workspace = true, features = ["slow_assertions"]}

[target.'cfg(target_os = "macos")'.dependencies]
# Building fuser without linking libfuse currently only works on Linux, not on macos. Macos requires the `libfuse` feature to link against the library
fuser = { workspace = true, features = ["libfuse"] }

[features]
default = ["fuser"]
fuse_mt = ["dep:fuse_mt"]
fuser = []
testutils = ["cryfs-utils/testutils", "cryfs-concurrent-store/testutils"]

[[example]]
name = "inmemory"
required-features = ["fuser"]

[[example]]
name = "passthrough"
required-features = ["fuser"]
