[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cryfs-utils"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
binrw.workspace = true
cryfs-version = { path = "../cryfs-version" }
derive_more.workspace = true
divrem = { workspace = true, optional = true }
futures.workspace = true
human-panic.workspace = true
indicatif.workspace = true
itertools.workspace = true
log.workspace = true
rayon.workspace = true
signal-hook.workspace = true
slab.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tokio-util.workspace = true
thiserror.workspace = true
rand.workspace = true
hex.workspace = true
lockable.workspace = true

[dev-dependencies]
common_macros.workspace = true
criterion.workspace = true
divrem.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
tempdir.workspace = true
rand = { workspace = true, features = ["small_rng"] }
# TODO Should we remove `slow_assertions` here to speed up cryfs in debug builds?
lockable = {workspace = true, features = ["slow_assertions"]}

[features]
testutils = ["dep:divrem"]

[[bench]]
harness = false
name = "path"
